# DefenseSchedule

./: .gitignore  MANIFEST.in  cons.py  pyproject.toml  run.py  web.py  web2.py
Data/: 2024-2025_ПІ_Бакалаври.xlsx  result.xlsx
def_shed/: Model.py  Student.py  Team.py  __init__.py  main.py  routes.py  run.py
def_shed.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
defense.egg-info/: PKG-INFO  SOURCES.txt
docs/: notes.txt
src/: Model.py  Slot.py  Student.py  Team.py  app.py  app1.py  main.py  slots.py  students.py  teams.py
src/defense.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/defense_schedule.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/templates/: answer.html  form.html
templates/: base.html  form.html
